[gd_scene load_steps=17 format=3 uid="uid://blwgbgbei4tsn"]

[ext_resource type="Texture2D" uid="uid://dgoli22eldhpr" path="res://sprites/small_garbage_bag.png" id="1_3xixx"]
[ext_resource type="Script" uid="uid://b0iydxyh8p3xh" path="res://scripts/trash.gd" id="1_exrr5"]
[ext_resource type="Texture2D" uid="uid://cw2t51ercwtq2" path="res://sprites/dumpster.png" id="2_24v10"]
[ext_resource type="Texture2D" uid="uid://c2efnbu2qfjdb" path="res://sprites/garbage_bag.png" id="3_2g7r5"]
[ext_resource type="Texture2D" uid="uid://daupy0l1gx7ws" path="res://sprites/trash-bin.png" id="5_4sf1q"]
[ext_resource type="Texture2D" uid="uid://c67u2ll85j6gn" path="res://sprites/smell2.png" id="6_2g7r5"]

[sub_resource type="SpriteFrames" id="SpriteFrames_r3mh6"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_24v10")
}],
"loop": true,
"name": &"DUMPSTER",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_2g7r5")
}],
"loop": true,
"name": &"TRASH_BAG",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("1_3xixx")
}],
"loop": true,
"name": &"TRASH_BAG_SMALL",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("5_4sf1q")
}],
"loop": true,
"name": &"TRASH_CAN",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_24v10"]
size = Vector2(12, 9)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_2g7r5"]
size = Vector2(20, 13)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_4sf1q"]
size = Vector2(14, 15)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_r3mh6"]
size = Vector2(46, 20)

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_2g7r5"]
load_path = "res://.godot/imported/smell.png-192bcd279f602cfeba5a1d0b7edc7aeb.ctex"

[sub_resource type="Curve" id="Curve_24v10"]
_data = [Vector2(0.07435898, 0), 0.0, 0.9163534, 0, 0, Vector2(0.52820516, 0.80921054), 0.29096588, 0.29096588, 0, 0, Vector2(1, 0), -2.966696, 0.0, 0, 0]
point_count = 3

[sub_resource type="CurveTexture" id="CurveTexture_2g7r5"]
curve = SubResource("Curve_24v10")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_4sf1q"]
particle_flag_disable_z = true
emission_shape = 3
emission_box_extents = Vector3(-10, 3, 1)
gravity = Vector3(0, -25, 0)
scale_min = 0.79999995
scale_max = 1.1999999
alpha_curve = SubResource("CurveTexture_2g7r5")

[sub_resource type="RectangleShape2D" id="RectangleShape2D_0q2p5"]
size = Vector2(6, 6)

[node name="Trash" type="Node2D" groups=["trash"]]
script = ExtResource("1_exrr5")

[node name="Sprite" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_r3mh6")
animation = &"TRASH_CAN"

[node name="Timer" type="Timer" parent="."]
autostart = true

[node name="StaticBody2D" type="StaticBody2D" parent="."]
collision_mask = 2

[node name="TRASH_BAG_SMALL" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2(0, 4.5)
shape = SubResource("RectangleShape2D_24v10")

[node name="TRASH_BAG" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2(0, 6.5)
shape = SubResource("RectangleShape2D_2g7r5")

[node name="TRASH_CAN" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2(0, 8)
shape = SubResource("RectangleShape2D_4sf1q")

[node name="DUMPSTER" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2(0, 6)
shape = SubResource("RectangleShape2D_r3mh6")

[node name="SmellParticles1" type="GPUParticles2D" parent="."]
visible = false
position = Vector2(0, -9)
emitting = false
amount = 3
texture = SubResource("CompressedTexture2D_2g7r5")
lifetime = 1.5
process_material = SubResource("ParticleProcessMaterial_4sf1q")

[node name="SmellParticles2" type="GPUParticles2D" parent="."]
visible = false
position = Vector2(0, -9)
emitting = false
amount = 3
texture = ExtResource("6_2g7r5")
lifetime = 1.5
process_material = SubResource("ParticleProcessMaterial_4sf1q")

[node name="DeleteCheck" type="Area2D" parent="."]
collision_layer = 32
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="DeleteCheck"]
shape = SubResource("RectangleShape2D_0q2p5")

[connection signal="area_entered" from="DeleteCheck" to="." method="_on_delete_check_area_entered"]
